--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -6,11 +6,10 @@
 	
 	<link rel="stylesheet" href="data/no-print.css" media="screen" />
 	<link rel="stylesheet" href="data/print.css" media="print" />
-	
 	<link rel="stylesheet" href="data/inline-print-media.css" />
 	<link rel="stylesheet" href="data/inline-mixed-media.css" />
-	
 	<link rel="stylesheet" href="data/print-styles.css" media="all" />
+	
 	
 	<script src="jquery.js"></script>
 	<script src="../../javascript/iepp.js"></script>
@@ -50,6 +49,12 @@
 </article>
 
 <article class="show_on_screen">
+	<p>
+		This article is only visible on screen.
+	</p>
+</article>
+
+<article class="print-is-copied">
 	<p>
 		This article is only visible on screen.
 	</p>
