removed all old unused files/new directory structure

--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" href="data/print-styles.css" media="all" />
 	
 	
-	<script src="jquery.js"></script>
-	<script src="../../javascript/iepp.js"></script>
+	<script src="helper/jquery.js"></script>
+	<script src="../../src/iepp.js"></script>
 	<script src="qunit/qunit.js"></script>
 	
 	<script>
