testcase for: # IE innerHTML bugs with attributes that contain /'s

--- a/test/index.html
+++ b/test/index.html
@@ -47,7 +47,9 @@
 		This article is only visible on print.
 	</p>
 </article>
-
+<form action="/test/ test">
+	<div class="inside-of-form">inside print</div>
+</form>
 <article class="show_on_screen">
 	<p>
 		This article is only visible on screen.
