jslint + whitespace cleanup + Use `iepp-` instead of `iepp_` as prefix for better gzip compression (by @mathiasbynens)

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
 	
 	
 	<script src="helper/jquery.js"></script>
-	<script src="../../src/iepp.js"></script>
+	<script src="../src/iepp.js"></script>
 	<script src="qunit/qunit.js"></script>
 	
 	<script>
