--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>IE&lt;9 HTML5 Shiv Tests</title>
-		<script src="../src/html5shiv.js"></script>
+		<script src="../src/html5shiv-printshiv.js"></script>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
