--- a/test/javascript.prototype.1.html
+++ b/test/javascript.prototype.1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
-		<script src="../src/html5shiv.js"></script>
+		<script src="../src/html5shiv-printshiv.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"></script>
 		<link rel="stylesheet" href="style.css">
 	</head>
