i like these tests too :-)

--- a/test/index.html
+++ b/test/index.html
@@ -50,6 +50,9 @@
 			<li>
 				<a href="javascript.yui.1.html">javascript.yui.1.html</a>: <span class="fail">FAIL in IE&lt;9</span>
 			</li>
+			<li>
+				<a href="mixed-test.html">mixed-test.html</a>: <span class="pass">PASS</span>
+			</li>
 		</ul>
 	<body>
 </html>
