html5shiv naming convention

--- a/test/html.1.html
+++ b/test/html.1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
-		<script src="../src/html5shiv.js"></script>
+		<script src="../src/html5shiv-print.js"></script>
 	</head>
 	<body>
 		<section>This sentence has no border <mark>with these words highlighted</mark>.</section>
