--- a/test/html.2.html
+++ b/test/html.2.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
-		<script src="../src/html5shiv.js"></script>
+		<script src="../src/html5shiv-print.js"></script>
 		<link rel="stylesheet" media="all" href="style.all.css">
 		<link rel="stylesheet" media="print" href="style.print.css">
 	</head>
