--- a/test/iframe.1-1.html
+++ b/test/iframe.1-1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Test 1</title>
-		<script src="../src/html5shiv.js"></script>
+		<script src="../src/html5shiv-print.js"></script>
 		<link rel="stylesheet" href="style.css">
 	<body>
 		<section>
