--- a/test/javascript.yui.1.html
+++ b/test/javascript.yui.1.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
-		<script src="../src/html5shiv.js"></script>
+		<script src="../src/html5shiv-print.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/yui/3.3.0/build/yui/yui-min.js"></script>
 		<link rel="stylesheet" href="style.css">
 	</head>
