adding simple-printless.html test-file

--- a/test/mixed-test.html
+++ b/test/mixed-test.html
@@ -41,7 +41,7 @@
 <h1>
 	Print Me in IE!
 </h1>
-
+<p>You should see dotted broders in print.</p>
 <article class="inline-mixed-media">
 	<p>
 		1. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,  sed diam non inline-mixed-media
