--- a/test/index.html
+++ b/test/index.html
@@ -53,6 +53,9 @@
 			<li>
 				<a href="mixed-test.html">mixed-test.html</a>: <span class="pass">PASS</span>
 			</li>
+			<li>
+				<a href="simple-printless.html">simple-printless.html</a>: <span class="pass">PASS</span>
+			</li>
 		</ul>
 	<body>
 </html>
