<form> margin: 0; to avoid misunderstanding success in IE7

--- a/test/mixed-test.html
+++ b/test/mixed-test.html
@@ -3,6 +3,9 @@
 <head>
 	<title>IEPP Test Suite</title>
 	<style>
+		form {
+			margin: 0;
+		}
 		article#inline-print {
 			border: 5px solid #000;
 		}
