--- a/test/index.html
+++ b/test/index.html
@@ -56,6 +56,9 @@
 			<li>
 				<a href="simple-printless.html">simple-printless.html</a>: <span class="pass">PASS</span>
 			</li>
+			<li>
+				<a href="jquery-1.7.1/index">simplified jQuery test suite</a>:
+			</li>
 		</ul>
 	<body>
 </html>
