added @jdbartlett 's innerShiv + removed createElement shiving

--- a/test/index.html
+++ b/test/index.html
@@ -27,28 +27,7 @@
 				<a href="javascript.2.html">javascript.2.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
-				<a href="javascript.3.html">javascript.3.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.4.html">javascript.4.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.dojo.1.html">javascript.dojo.1.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.dojo.2.html">javascript.dojo.2.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.jquery.1.html">javascript.jquery.1.html</a>: <span class="fail">FAIL in IE&lt;9</span> and <span class="pass">PASS in emulated IE&lt;9</span>
-			</li>
-			<li>
-				<a href="javascript.jquery.2.html">javascript.jquery.2.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.prototype.1.html">javascript.prototype.1.html</a>: <span class="fail">FAIL in IE&lt;9</span>
-			</li>
-			<li>
-				<a href="javascript.yui.1.html">javascript.yui.1.html</a>: <span class="fail">FAIL in IE&lt;9</span>
+				<a href="innerShiv.html">innerShiv.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
 				<a href="mixed-test.html">mixed-test.html</a>: <span class="pass">PASS</span>
