--- a/test/javascript.2.html
+++ b/test/javascript.2.html
@@ -9,11 +9,9 @@
 	<body>
 		<section>This sentence is in a green box <mark>with these words highlighted</mark>.</section>
 		<script id="script">
-var div = document.createElement('div');
-div.innerHTML = '<section>This native javascript sentence is in a green box <mark>with these words highlighted</mark>?</section>';
-var frag = document.createDocumentFragment();
+var div = html5.innerShiv('<section>This native javascript sentence is in a green box <mark>with these words highlighted</mark>?</section>');
+var frag = html5.innerShiv('<section>This native javascript sentence is also in a green box <mark>with these words highlighted</mark>?</section>');
 frag.appendChild(div);
-div.innerHTML += '<section>This native javascript sentence is also in a green box <mark>with these words highlighted</mark>?</section>';
 document.body.appendChild(frag);
 		</script>
 	<body>
