You missed the close head tag "</head>".

--- a/test/iframe.1-1.html
+++ b/test/iframe.1-1.html
@@ -5,6 +5,8 @@
 		<title>Test 1</title>
 		<script src="../src/html5shiv-printshiv.js"></script>
 		<link rel="stylesheet" href="style.css">
+		
+	</head>
 	<body>
 		<section>
 			<p><a href="iframe.1-2.html">Change to Test Page 2</a></p>
