added simple performance test

--- a/test/index.html
+++ b/test/index.html
@@ -59,6 +59,9 @@
 			<li>
 				<a href="jquery-1.7.1/index">simplified jQuery test suite</a>:
 			</li>
+			<li>
+				<a href="perf.1.html">simple performance test</a>
+			</li>
 		</ul>
 	<body>
 </html>
