added performance test

--- a/test/index.html
+++ b/test/index.html
@@ -60,7 +60,10 @@
 				<a href="jquery-1.7.1/index">simplified jQuery test suite</a>:
 			</li>
 			<li>
-				<a href="perf.1.html">simple performance test</a>
+				<a href="perf.1.html">mixed performance test</a>
+			</li>
+			<li>
+				<a href="perf.2.html">pure createElement/createDocumentFragment performance test</a>
 			</li>
 		</ul>
 	<body>
