highcharts regression test for Issue #21

--- a/test/index.html
+++ b/test/index.html
@@ -57,6 +57,9 @@
 				<a href="simple-printless.html">simple-printless.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
+				<a href="highcharts/area-basic.html">area-basic.html</a>: <span class="pass">PASS</span>
+			</li>
+			<li>
 				<a href="jquery-1.7.1/index">simplified jQuery test suite</a>:
 			</li>
 			<li>
