renamed shiv option

--- a/test/perf.1.html
+++ b/test/perf.1.html
@@ -40,7 +40,7 @@
 			var time = document.getElementById('time');
 			var cur = new Date().getTime();
 			
-//			html5.fixDomMethods = false;
+//			html5.shivMethods = false;
 			
 			for(var i = 0; i < 1000; i++){
 				addDom();
