--- a/test/perf.2.html
+++ b/test/perf.2.html
@@ -20,7 +20,7 @@
 			var time = document.getElementById('time');
 			var cur = new Date().getTime();
 			
-//			html5.fixDomMethods = false;
+//			html5.shivMethods = false;
 			
 			for(var i = 0; i < 10000; i++){
 				addDom();
