fix path to jquery test suite

--- a/test/index.html
+++ b/test/index.html
@@ -60,7 +60,7 @@
 				<a href="highcharts/area-basic.html">area-basic.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
-				<a href="jquery-1.7.1/index">simplified jQuery test suite</a>:
+				<a href="jquery-1.7.1/index.html">simplified jQuery test suite</a>:
 			</li>
 			<li>
 				<a href="perf.1.html">mixed performance test</a>
