updated test result

--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,7 @@
 				<a href="javascript.3.html">javascript.3.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
-				<a href="javascript.4.html">javascript.4.html</a>: <span class="pass">PASS</span>
+				<a href="javascript.4.html">javascript.4.html</a>: <span class="fail">FAIL in IE&lt;9</span> and <span class="pass">PASS in emulated IE&lt;9</span>
 			</li>
 			<li>
 				<a href="javascript.dojo.1.html">javascript.dojo.1.html</a>: <span class="pass">PASS</span>
