--- a/test/index.html
+++ b/test/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>IE&lt;9 HTML5 Shiv Tests</title>
-		<script src="../src/html5shiv-printshiv.js"></script>
 		<link rel="stylesheet" href="style.css">
+		<script src="../src/html5shiv-printshiv.js"></script>
 	</head>
 	<body>
 		<h1>
@@ -49,6 +49,9 @@
 			</li>
 			<li>
 				<a href="javascript.yui.1.html">javascript.yui.1.html</a>: <span class="fail">FAIL in IE&lt;9</span>
+			</li>
+			<li>
+				<a href="object-test.html">object-test.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
 				<a href="mixed-test.html">mixed-test.html</a>: <span class="pass">PASS</span>
