--- a/test/javascript.jquery.1.html
+++ b/test/javascript.jquery.1.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
+		<link rel="stylesheet" href="style.css">
 		<script src="../src/html5shiv-printshiv.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.js"></script>
-		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<section>This sentence is in a green box <mark>with these words highlighted</mark>.</section>
 		<script>
-		jQuery(document.body).append('<section>This jQuery 1.6.4 sentence is in a green box <mark>with these words highlighted</mark>?</section>');
+			$(document.body).append('<section>This jQuery 1.6.4 sentence is in a green box <mark>with these words highlighted</mark>?</section>');
 		</script>
 	<body>
 </html>
