--- a/test/object-test.html
+++ b/test/object-test.html
@@ -4,8 +4,6 @@
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
 		<link rel="stylesheet" href="style.css">
-		<script src="../src/html5shiv.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 		<style>
 			.box {
 				position: relative;
@@ -18,55 +16,49 @@
 				width: 200px;
 				height: 100px;
 				border: 1px solid #000;
-				
 			}
 		</style>
-		<script type="text/javascript">
-			swfobject.registerObject("static-id", "6.0.0");
-			
-			swfobject.embedSWF("data/paramtracer.swf", "dynamic-id", "480", "420", "6.0.0", null, {aFlashVar: "aFlashVarValue"}, {wmode: "transparent"});
-
+		<script src="../src/html5shiv.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+		<script>
+			swfobject.registerObject('static-id', '6.0.0');
+			swfobject.embedSWF('data/paramtracer.swf', 'dynamic-id', '480', '420', '6.0.0', null, { 'aFlashVar': 'aFlashVarValue' }, { 'wmode': 'transparent' });
 		</script>
-
 	</head>
 	<body>
 		<section>This sentence has 3px solid border <mark>with these words highlighted</mark>.</section>
-		
-		
 		<h1>static swfobject</h1>
 		<div class="box">
 			<object id="static-id" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="480" height="420">
-				<param name="movie" value="data/paramtracer.swf" />
+				<param name="movie" value="data/paramtracer.swf">
 				<!--[if !IE]>-->
 					<object type="application/x-shockwave-flash" data="data/paramtracer.swf" width="480" height="420">
 					<!--<![endif]-->
-						<param name="flashvars" value="aFlashVar=aFlashVarValue" />
-						<param name="wmode" value="transparent" />
+						<param name="flashvars" value="aFlashVar=aFlashVarValue">
+						<param name="wmode" value="transparent">
 					<!--[if !IE]>-->
 					</object>
 				<!--<![endif]-->
 			</object>
 			<div class="swf-overlay"></div>
 		</div>
-		
-		
+
 		<h1>dynamic swfobject</h1>
 		<div class="box">
 			<div id="dynamic-id">
-				
 			</div>
 			<div class="swf-overlay"></div>
 		</div>
-		
+
 		<h1>innerHTML object</h1>
 		<div class="box" id="checkinner">
 			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="480" height="420">
-				<param name="movie" value="data/paramtracer.swf" />
+				<param name="movie" value="data/paramtracer.swf">
 				<!--[if !IE]>-->
 					<object type="application/x-shockwave-flash" data="data/paramtracer.swf" width="480" height="420">
 					<!--<![endif]-->
-						<param name="flashvars" value="aFlashVar=aFlashVarValue" />
-						<param name="wmode" value="transparent" />
+						<param name="flashvars" value="aFlashVar=aFlashVarValue">
+						<param name="wmode" value="transparent">
 					<!--[if !IE]>-->
 					</object>
 				<!--<![endif]-->
