--- a/test/javascript.4.html
+++ b/test/javascript.4.html
@@ -10,7 +10,7 @@
 		<section>This sentence is in a green box <mark>with these words highlighted</mark>.</section>
 		<script id="script">
 			var frag = document.createDocumentFragment();
-			var fragDiv = ('createElement' in frag) ? frag.createElement('div') : frag.appendChild(document.createElement('div'));
+			var fragDiv = frag.appendChild(document.createElement('div'));
 			fragDiv.innerHTML = '<section>This native javascript sentence is in a green box <mark>with these words highlighted</mark>?</section>';
 			var fragDivClone = fragDiv.cloneNode(true);
 			document.body.appendChild(fragDivClone);
