setting shivMethods to false no longer stops traditional html55shiv

--- a/test/html.2.html
+++ b/test/html.2.html
@@ -5,7 +5,14 @@
 		<title>HTML5 Shiv</title>
 		<link rel="stylesheet" media="all" href="style.all.css">
 		<link rel="stylesheet" media="print" href="style.print.css">
-		<script src="../src/html5shiv-printshiv.js"></script>
+		<script>
+			// set options for html5shiv
+			if(!window.html5){
+				window.html5 = {}; 
+			}
+			window.html5.shivMethods = false;
+		</script>
+		<script src="../src/html5shiv.js"></script>
 	</head>
 	<body>
 		<section>This sentence is in a green box <mark>with these words highlighted</mark>.</section>
