simplified HTML5 style check (fixes crash with bgImage on body)

--- a/test/javascript.crash.html
+++ b/test/javascript.crash.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
+		<style>
+			body {
+				color: #fff;
+				background: url(data/body-crash.jpg);
+			}
+		</style>
 		<link rel="stylesheet" href="style.css">
 		<script src="../src/html5shiv-printshiv.js"></script>
 		<script src="//use.typekit.com/fbz1vwc.js"></script>
