--- a/test/javascript.crash.html
+++ b/test/javascript.crash.html
@@ -3,13 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
+		<link rel="stylesheet" href="style.css">
 		<style>
 			body {
-				color: #fff;
-				background: url(data/body-crash.jpg);
+				background: url(data/body-crash.png);
 			}
 		</style>
-		<link rel="stylesheet" href="style.css">
 		<script src="../src/html5shiv-printshiv.js"></script>
 		<script src="//use.typekit.com/fbz1vwc.js"></script>
 		<script>
@@ -17,6 +16,8 @@
 		</script>
 	</head>
 	<body>
-		<section>The IE tab/window <mark>should not</mark> crash.</section>
+		<section>
+			The IE tab/window <mark>should not</mark> crash <strong>and</strong> print preview <mark>should not</mark> throw an error.
+		</section>
 	<body>
 </html>
