--- a/test/javascript.dojo.2.html
+++ b/test/javascript.dojo.2.html
@@ -8,7 +8,9 @@
 		<script src="//ajax.googleapis.com/ajax/libs/dojo/1.6.1/dojo/dojo.xd.js"></script>
 	</head>
 	<body>
-		<section>This sentence is in a green box <mark>with these words highlighted</mark>.</section>
+		<section>
+			This sentence is in a green box <mark>with these words highlighted</mark>.
+		</section>
 		<script>
 			dojo.place('<section>This Dojo 1.6.1 sentence is in a green box <mark>with these words highlighted</mark>?</section>', document.body);
 		</script>
