--- a/test/javascript.jquery.1.html
+++ b/test/javascript.jquery.1.html
@@ -8,7 +8,9 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.js"></script>
 	</head>
 	<body>
-		<section>This sentence is in a green box <mark>with these words highlighted</mark>.</section>
+		<section>
+			This sentence is in a green box <mark>with these words highlighted</mark>.
+		</section>
 		<script>
 			$(document.body).append('<section>This jQuery 1.6.4 sentence is in a green box <mark>with these words highlighted</mark>?</section>');
 		</script>
