--- a/test/javascript.yui.1.html
+++ b/test/javascript.yui.1.html
@@ -8,7 +8,9 @@
 		<script src="//ajax.googleapis.com/ajax/libs/yui/3.3.0/build/yui/yui-min.js"></script>
 	</head>
 	<body>
-		<section>This sentence is in a green box <mark>with these words highlighted</mark>.</section>
+		<section>
+			This sentence is in a green box <mark>with these words highlighted</mark>.
+		</section>
 		<script>
 			YUI().use('node', function(Y) {
 				var yDiv = Y.Node.create('<div/>');
