--- a/test/simple-printless.html
+++ b/test/simple-printless.html
@@ -16,7 +16,9 @@
 		<script src="../src/html5shiv.js"></script>
 	</head>
 	<body>
-		<section>This sentence has 3px solid border <mark>with these words highlighted</mark>.</section>
+		<section>
+			This sentence has 3px solid border <mark>with these words highlighted</mark>.
+		</section>
 		<div>
 			<video></video>
 			some text tests video inline-block
