--- a/test/javascript.prototype.1.html
+++ b/test/javascript.prototype.1.html
@@ -8,7 +8,9 @@
 		<script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"></script>
 	</head>
 	<body>
-		<section>This sentence is in a green box <mark>with these words highlighted</mark>.</section>
+		<section>
+			This sentence is in a green box <mark>with these words highlighted</mark>.
+		</section>
 		<script id="script">
 			$(document.body).insert('<section>This Prototype.js 1.7.0.0 sentence is in a green box <mark>with these words highlighted</mark>?</section>');
 		</script>
