--- a/test/mixed-test.html
+++ b/test/mixed-test.html
@@ -42,7 +42,9 @@
 		<h1>
 			Print Me in IE!
 		</h1>
-		<p>You should see dotted broders in print.</p>
+		<p>
+			You should see dotted broders in print.
+		</p>
 		<article class="inline-mixed-media">
 			<p>
 				1. This text should be underlined in IE7+.
@@ -50,7 +52,9 @@
 		</article>
 		<article class="inline-print-media">
 			<form action="/test/ test">
-				<div class="inside-of-form">2. inside print</div>
+				<div class="inside-of-form">
+					2. inside print
+				</div>
 			</form>
 		</article>
 		<article class="print">
