--- a/test/object-test.html
+++ b/test/object-test.html
@@ -18,7 +18,7 @@
 				border: 1px solid #000;
 			}
 		</style>
-		<script src="../src/html5shiv.js"></script>
+		<script src="../src/html5shiv-printshiv.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 		<script>
 			swfobject.registerObject('static-id', '6.0.0');
@@ -26,8 +26,12 @@
 		</script>
 	</head>
 	<body>
-		<section>This sentence has 3px solid border <mark>with these words highlighted</mark>.</section>
-		<h1>static swfobject</h1>
+		<section>
+			This sentence has 3px solid border <mark>with these words highlighted</mark>.
+		</section>
+		<h1>
+			static swfobject
+		</h1>
 		<div class="box">
 			<object id="static-id" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="480" height="420">
 				<param name="movie" value="data/paramtracer.swf">
@@ -43,14 +47,18 @@
 			<div class="swf-overlay"></div>
 		</div>
 
-		<h1>dynamic swfobject</h1>
+		<h1>
+			dynamic swfobject
+		</h1>
 		<div class="box">
 			<div id="dynamic-id">
 			</div>
 			<div class="swf-overlay"></div>
 		</div>
 
-		<h1>innerHTML object</h1>
+		<h1>
+			innerHTML object
+		</h1>
 		<div class="box" id="checkinner">
 			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="480" height="420">
 				<param name="movie" value="data/paramtracer.swf">
