html5shiv: Cleanup unit tests. [jddalton]

--- a/test/html.1.html
+++ b/test/html.1.html
@@ -6,6 +6,8 @@
 		<script src="../src/html5shiv-printshiv.js"></script>
 	</head>
 	<body>
-		<section>This sentence has no border <mark>with these words highlighted</mark>.</section>
+		<section>
+			This sentence has no border <mark>with these words highlighted</mark>.
+		</section>
 	<body>
 </html>
