--- a/test/iframe.1-1.html
+++ b/test/iframe.1-1.html
@@ -8,7 +8,9 @@
 	</head>
 	<body>
 		<section>
-			<p><a href="iframe.1-2.html">Change to Test Page 2</a></p>
+			<p>
+				<a href="iframe.1-2.html">Change to Test Page 2</a>
+			</p>
 		</section>
 	</body>
 </html>
