--- a/test/iframe.1-2.html
+++ b/test/iframe.1-2.html
@@ -7,7 +7,9 @@
 		<script src="../src/html5shiv-printshiv.js"></script>
 	<body>
 		<section>
-			<p><a href="iframe.1-1.html">Change to Test Page 1</a> <span contenteditable>...</span></p>
+			<p>
+				<a href="iframe.1-1.html">Change to Test Page 1</a> <span contenteditable>...</span>
+			</p>
 		</section>
 	</body>
 </html>
