--- a/test/javascript.4.html
+++ b/test/javascript.4.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
 		<link rel="stylesheet" href="style.css">
+		<script>
+			// set options for html5shiv
+			var html5 = {
+				'shivMethods': false
+			};
+		</script>
 		<script src="../src/html5shiv-printshiv.js"></script>
 	</head>
 	<body>
@@ -11,11 +17,17 @@
 			This sentence is in a green box <mark>with these words highlighted</mark>.
 		</section>
 		<script>
-			var frag = document.createDocumentFragment();
+			var div = html5.createElement('div');
+			div.innerHTML = '<section>This native javascript sentence is in a green box <mark>with these words highlighted</mark>?</section>';
+
+			var frag = html5.createDocumentFragment();
+			frag.appendChild(div);
+			div.innerHTML += '<section>This native javascript sentence is also in a green box <mark>with these words highlighted</mark>?</section>';
+			document.body.appendChild(frag);
+
 			var fragDiv = frag.appendChild(document.createElement('div'));
 			fragDiv.innerHTML = '<section>This native javascript sentence is in a green box <mark>with these words highlighted</mark>?</section>';
-			var fragDivClone = fragDiv.cloneNode(true);
-			document.body.appendChild(fragDivClone);
+			document.body.appendChild(fragDiv);
 		</script>
 	<body>
 </html>
