--- a/test/javascript.5.html
+++ b/test/javascript.5.html
@@ -11,13 +11,12 @@
 			This sentence is in a green box <mark>with these words highlighted</mark>.
 		</section>
 		<script>
-			var div = document.createElement('div');
-			div.innerHTML = '<section>This native javascript sentence is in a green box <mark>with these words highlighted</mark>?</section>';
-
 			var frag = document.createDocumentFragment();
-			frag.appendChild(div);
-			div.innerHTML += '<section>This native javascript sentence is also in a green box <mark>with these words highlighted</mark>?</section>';
-			document.body.appendChild(frag);
+			var fragDiv = frag.appendChild(document.createElement('div'));
+			fragDiv.innerHTML = '<section>This native javascript sentence is in a green box <mark>with these words highlighted</mark>?</section>';
+
+			var fragDivClone = fragDiv.cloneNode(true);
+			document.body.appendChild(fragDivClone);
 		</script>
 	<body>
 </html>
