html5shiv: Add test html.3-display-test.html to index.html. [jddalton]

--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,9 @@
 				<a href="html.2.html">html.2.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
+				<a href="html.3-display-test.html">html.3-display-test.html</a>: <span class="pass">PASS</span>
+			</li>
+			<li>
 				<a href="iframe.1.html">iframe.1.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
