--- a/test/html.3-display-test.html
+++ b/test/html.3-display-test.html
@@ -12,6 +12,8 @@
 		<script src="../src/html5shiv-printshiv.js"></script>
 	</head>
 	<body>
-		<section>Can we trick the display test? This sentence is in a green box <mark>with these words highlighted</mark>.</section>
+		<section>
+			Can we trick the display test? This sentence is in a green box <mark>with these words highlighted</mark>.
+		</section>
 	<body>
 </html>
