--- a/test/html.3-display-test.html
+++ b/test/html.3-display-test.html
@@ -3,17 +3,24 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML5 Shiv</title>
-		<style>
+		<style id="trick">
 			[hidden] {
 				display: none;
 			}
 		</style>
 		<link rel="stylesheet" href="style.css">
 		<script src="../src/html5shiv-printshiv.js"></script>
+		<script>
+			var trick = document.getElementById('trick');
+			trick.parentNode.removeChild(trick);
+		</script>
 	</head>
 	<body>
 		<section>
 			Can we trick the display test? This sentence is in a green box <mark>with these words highlighted</mark>.
+		</section>
+		<section hidden="hidden">
+			This <mark>should be</mark> hidden in IE7+.
 		</section>
 	<body>
 </html>
