--- a/test/iframe.1.html
+++ b/test/iframe.1.html
@@ -4,7 +4,17 @@
 		<meta charset="utf-8">
 		<title>HTML5Shiv</title>
 		<link rel="stylesheet" href="style.css">
+		<style>
+			body {
+				color: #fff;
+				background: url(data/body-crash.jpg);
+			}
+		</style>
 		<script src="../src/html5shiv-printshiv.js"></script>
+		<script src="//use.typekit.com/fbz1vwc.js"></script>
+		<script>
+			Typekit.load();
+		</script>
 	</head>
 	<body>
 		<section>1</section>
