--- a/test/index.html
+++ b/test/index.html
@@ -10,69 +10,35 @@
 		<h1>
 			HTML5 Shiv Tests
 		</h1>
+		<h2>manual Print tests</h2>
 		<ul>
 			<li>
-				<a href="html.1.html">html.1.html</a>: <span class="pass">PASS</span>
+				<a href="html5shiv.html">html5shiv testsuite</a>: <span class="pass">PASS</span>
 			</li>
-			<li>
-				<a href="html.2.html">html.2.html</a>: <span class="pass">PASS</span>
-			</li>
+			
+		</ul>
+		<h2>manual Print tests</h2>
+		<ul>
 			<li>
 				<a href="iframe.1.html">iframe.1.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
-				<a href="javascript.1.html">javascript.1.html</a>: <span class="pass">PASS</span>
+				<a href="mixed-test.html">mixed-test.html</a>: <span class="pass">PASS</span>
 			</li>
-			<li>
-				<a href="javascript.2.html">javascript.2.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.3.html">javascript.3.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.4.html">javascript.4.html</a>: <span class="fail">FAIL in IE&lt;9</span> and <span class="pass">PASS in emulated IE&lt;9</span>
-			</li>
-			<li>
-				<a href="javascript.crash.html">javascript.crash.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.dojo.1.html">javascript.dojo.1.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.dojo.2.html">javascript.dojo.2.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.jquery.1.html">javascript.jquery.1.html</a>: <span class="fail">FAIL in IE&lt;9</span> and <span class="pass">PASS in emulated IE&lt;9</span>
-			</li>
-			<li>
-				<a href="javascript.jquery.2.html">javascript.jquery.2.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="javascript.prototype.1.html">javascript.prototype.1.html</a>: <span class="fail">FAIL in IE&lt;9</span>
-			</li>
-			<li>
-				<a href="javascript.yui.1.html">javascript.yui.1.html</a>: <span class="fail">FAIL in IE&lt;9</span>
-			</li>
+			
+		</ul>
+		<h2>additional tests</h2>
+		<ul>
+			
 			<li>
 				<a href="object-test.html">object-test.html</a>: <span class="pass">PASS</span>
 			</li>
-			<li>
-				<a href="mixed-test.html">mixed-test.html</a>: <span class="pass">PASS</span>
-			</li>
-			<li>
-				<a href="simple-printless.html">simple-printless.html</a>: <span class="pass">PASS</span>
-			</li>
+			
 			<li>
 				<a href="highcharts/area-basic.html">area-basic.html</a>: <span class="pass">PASS</span>
 			</li>
 			<li>
 				<a href="jquery-1.7.1/index.html">simplified jQuery test suite</a>:
-			</li>
-			<li>
-				<a href="perf.1.html">mixed performance test</a>
-			</li>
-			<li>
-				<a href="perf.2.html">pure createElement/createDocumentFragment performance test</a>
 			</li>
 		</ul>
 	<body>
