--- a/test/jquery-1.7.1/index.html
+++ b/test/jquery-1.7.1/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>jQuery Test Suite</title>
-		<link rel="stylesheet" media="screen" href="qunit/qunit/qunit.css">
+		<link rel="stylesheet" media="screen" href="../qunit/qunit.css">
 		<link rel="stylesheet" media="screen" href="data/testsuite.css">
 		<script src="data/testinit.js"></script>
 		<script src="../../src/html5shiv-printshiv.js"></script>
 		<script src="//code.jquery.com/jquery-1.7.1.min.js"></script>
 		<script src="data/versioncheck.js"></script>
-		<script src="qunit/qunit/qunit.js"></script>
+		<script src="../qunit/qunit.js"></script>
 		<script src="data/testrunner.js"></script>
 		<script src="unit/core.js"></script>
 		<script src="unit/traversing.js"></script>
