--- a/test/mixed-test.html
+++ b/test/mixed-test.html
@@ -9,6 +9,11 @@
 		<link rel="stylesheet" href="data/screen.css" media="screen, projection">
 		<link rel="stylesheet" href="data/print-styles.css" media="print">
 		<style>
+			body {
+				background: url(data/body-crash.jpg) no-repeat;
+			}
+		</style>
+		<style>
 			form {
 				margin: 0;
 			}
@@ -37,6 +42,11 @@
 			}
 		</style>
 		<script src="../src/html5shiv-printshiv.js"></script>
+		
+		<script src="//use.typekit.com/fbz1vwc.js"></script>
+		<script>
+			Typekit.load();
+		</script>
 	</head>
 	<body id="print-body-id" class="print-body-class">
 		<h1>
