--- a/test/html5shiv.html
+++ b/test/html5shiv.html
@@ -29,9 +29,15 @@
 		
 		<iframe class="test-frame" src="data/iframed-tests.html?disableMethodsBefore"></iframe>
 		<iframe class="test-frame" src="data/iframed-tests.html?disableMethodsAfter"></iframe>
-		<iframe class="test-frame unknown-before" src="data/iframed-tests.html?addUnknownBefore"></iframe>
+		<iframe class="test-frame" src="data/iframed-tests.html?addUnknownBefore"></iframe>
+		<!-- ToDo
+		<iframe class="test-frame" src="data/iframed-tests.html?addUnknownAfter"></iframe>
+		-->
 		
 		<div id="qunit-fixture">
+			<abcxyz>
+				<div class="inside"></div>
+			</abcxyz>
 			<article>
 				<div class="inside"></div>
 			</article>
