--- a/test/html5shiv.html
+++ b/test/html5shiv.html
@@ -30,9 +30,10 @@
 		<iframe class="test-frame" src="data/iframed-tests.html?disableMethodsBefore"></iframe>
 		<iframe class="test-frame" src="data/iframed-tests.html?disableMethodsAfter"></iframe>
 		<iframe class="test-frame" src="data/iframed-tests.html?addUnknownBefore"></iframe>
-		<!-- ToDo
 		<iframe class="test-frame" src="data/iframed-tests.html?addUnknownAfter"></iframe>
-		-->
+		<iframe class="test-frame" src="data/iframed-tests.html?disableCSS"></iframe>
+		<iframe class="test-frame" src="data/iframed-tests.html?noEmbed"></iframe>
+		
 		
 		<div id="qunit-fixture">
 			<abcxyz>
