Added Support for the main structural element

--- a/test/data/iframed-tests.html
+++ b/test/data/iframed-tests.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -44,7 +44,7 @@
 				if(!window.html5){
 					window.html5 = {};
 				}
-				window.html5.elements = 'abcxyz abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup mark meter nav output picture progress section summary time video';
+				window.html5.elements = 'abcxyz abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup main mark meter nav output picture progress section summary time video';
 			}
 			
 			
@@ -59,7 +59,7 @@
 			}
 			
 			if(querys.addUnknownAfter){
-				window.html5.elements = 'abcxyz abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup mark meter nav output picture progress section summary time video';
+				window.html5.elements = 'abcxyz abbr article aside audio bdi canvas data datalist details figcaption figure footer header hgroup main ark meter nav output picture progress section summary time video';
 				html5.shivDocument(document);
 			}
 		</script>
@@ -97,6 +97,9 @@
 			<section>
 				<div class="inside"></div>
 			</section>
+            <main>
+                <div class="inside"></div>
+            </main>
 			
 		</div>
 	</body>
