--- a/test/html5shiv.html
+++ b/test/html5shiv.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en" dir="ltr" id="html">
 	<head>
 		<meta charset="utf-8">
@@ -66,6 +66,9 @@
 			<section>
 				<div class="inside"></div>
 			</section>
+            <main>
+                <div class="inside"></div>
+            </main>
 		</div>
 	</body>
 </html>
