--- a/test/iframe.1-1.html
+++ b/test/iframe.1-1.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Test 1</title>
 		<link rel="stylesheet" href="style.css">
+		// Adding source file
 		<script src="../src/html5shiv-printshiv.js"></script>
 	</head>
 	<body>
