--- a/test/iframe.1.html
+++ b/test/iframe.1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
-            color: #ffff;
+            color: #fff;
             background: url(data/body-crash.jpg);
         }
     </style>
