--- a/test/html5shiv.html
+++ b/test/html5shiv.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr" id="html">
 	<head>
 		<meta charset="utf-8">
-		<title>html5shiv Test Suite</title>
+		<title>html5shiv Test Suite and many more</title>
 		<style>
 			body {
 				background: url(data/body-crash.jpg) no-repeat -999px -999px;
