--- a/test/data/iframed-tests.html
+++ b/test/data/iframed-tests.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>iframe tests</title>
+		<title>iframe tests with pictures</title>
 		
 		
 		<style>
