--- a/test/mixed-test.html
+++ b/test/mixed-test.html
@@ -49,13 +49,13 @@
 		</script>
 	</head>
 	<body id="print-body-id" class="print-body-class">
-		<h1>
+		<h3>
 			Print Me in IE!
-		</h1>
+		</h3>
 		<p>You should see dotted broders in print.</p>
 		<article class="inline-mixed-media">
 			<p>
-				1. This text should be underlined in IE7+.
+				1. This text should be underlined in IE7+....<br>
 			</p>
 		</article>
 		<article class="inline-print-media">
