--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>IE&lt;9 HTML5 Shiv Tests</title>
+		<title>Shiv Tests</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="../src/html5shiv-printshiv.js"></script>
 	</head>
